Add a note about `org-export-current-backend'.

--- a/Changes.org
+++ b/Changes.org
@@ -387,13 +387,20 @@ Tassilo Horn for a patch to this effect.
 
 Non-nil means append inherited tags when archiving a subtree.
 
+**** New variable `org-export-current-backend'
+
+This variable is dynamically set by exporters.  You can check
+against its value anytime in your code to see if you are
+exporting to HTML, LaTeX, etc.  Possible values are 'html,
+'latex, 'ascii, 'docbook.  Thanks to Eric Schulte and Dan Davison
+for ideas and patches in this area.
+
 **** = = emphasis now uses \protectedtexttt
 **** Author's email now included in the LaTeX title
 
 When `org-export-email-info' is non-nil, the LaTeX title will
 also include the author's email.  Thanks to Lawrence Mitchell for
 the patch.
-
 
 
 
