--- a/index.org
+++ b/index.org
@@ -107,7 +107,7 @@
      but unobtrusive.  The [[http://orgmode.org/worg/org-faq.php][typical answer]] to "/Can it do X?/" is "/Yes!/".
 
 - Flexibility :: Org-mode is like a Swiss army knife.  People use it for
-     [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Getting Things Done (GTD)]], as a [[http://www.newartisans.com/blog_files/org.mode.day.planner.php][Day Planner]], as a [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]], for Web
+     [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Getting Things Done (GTD)]], as a [[http://newartisans.com/2007/08/using-org-mode-as-a-day-planner/][Day Planner]], as a [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]], for Web
      and PDF [[http://orgmode.org][Authoring]], and much more.
 
 - Support :: Org-mode is [[http://orgmode.org/manual/index.html][documented extensively]], and many [[http://orgmode.org/worg/org-tutorials/index.php][tutorials]] put
