--- a/Changes.org
+++ b/Changes.org
@@ -207,6 +207,10 @@ will now expand to include the bodies of all code blocks which
 are named =the-ref=, as well as all code blocks which have a
 =:noweb-ref= header argument set to the value =the-ref=.
 
+*** New tests
+
+The =tests/= directory has been extensively updated.
+
 ** Important bugfixes
 
 *** Org-exp-blocks --- proper handling of recursively nested blocks
