--- a/index.org
+++ b/index.org
@@ -124,6 +124,7 @@ look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org
 #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2011-07-06 mer.> Release 7.6.
 - <2011-03-07 lun.> Release 7.5.
 - <2010-12-17 Fri> The Org manual is now available as [[http://www.network-theory.co.uk/org/manual/][book published
   by Network Theory Ltd]], at a retail price of $14.95.  For each book
@@ -137,15 +138,16 @@ look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org
 - <2010-06-06 Sun>: iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.5 introduces
   encryption.
 
-* Current Version (7.5)
+* Current Version (7.6)
 
-The current version is 7.5.  To see what has changed in recent releases,
+The current version is 7.6.  To see what has changed in recent releases,
 check this detailed list of [[file:Changes.html][changes]].
 
-This package works on GNU Emacs 23 and 22, and (with minor restrictions) on
-XEmacs 21.  Emacs 22.2 ships with Org-mode version 4.67d, Emacs 23.1 with
-6.21b.  The latest Emacs development version usually contains a fairly
-recent version, but may lag a bit behind the website release.
+This package works on GNU Emacs 24, 23 and 22, and (with minor
+restrictions) on XEmacs 21.  Emacs 22.2 ships with Org-mode version 4.67d,
+Emacs 23.1 with 6.21b.  The latest Emacs development version usually
+contains a fairly recent version, but may lag a bit behind the website
+release.
 
 * Downloads
 
@@ -188,7 +190,7 @@ download a [[http://orgmode.org/w/org-mode.git/snapshot][tar.gz snapshot]] from 
 
    - Links below point to the /development version/ of the manual.  If
      you want to read the latest released manuals (currently for Org
-     7.5), please browse [[http://orgmode.org/manual/release_7.5/][this directory]].
+     7.6), please browse [[http://orgmode.org/manual/release_7.6/][this directory]].
    - Read the [[file:guide/index.html][online compact guide]] or download it as a [[file:orgguide.pdf][PDF document]].
      The compact guide is a 40-page introduction to Org mode.  It
      covers all features in a basic way and has links to in-depth
